k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  namespace: my-app
  labels:
    app: my-app
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
